Mon Dec 29 21:11:31 CET 2008 Christian Anthon <anthon@kiku.dk>

	* po/es.po: updated spanish translation

Mon Dec 29 11:56:38 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: turn splash screen off by default

Mon Dec 29 11:36:28 CET 2008 Christian Anthon <anthon@kiku.dk>

	* play.c: make end game work without gtk

Mon Dec 29 00:08:28 CET 2008 Christian Anthon <anthon@kiku.dk>

	* util.c: fix CreateTempFile to something that hopefully works
	universally

Thu Dec 28 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtktoolbar.c: Fix size of edit button
	* gtkgame.c: Fix menu toolbar state (on startup)

Sun Dec 28 01:18:17 CET 2008 Christian Anthon <anthon@kiku.dk>

	* eval.c: fix a bug in eval lookup in hypergammon db. iPos was (by
	accident) made an unsigned short int in november 2004, but should be
	at least an int.

Fri Dec 26 00:33:04 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkprefs.c, gtktoolbar.c: we don't use the old tooltip api anymore

Thu Dec 18 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprogress.c: Fix bug in number of rollouts displayed when alternatives
			finish early (reported by Bob Koca)

Wed Dec 17 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Replace clist control with tree view

Wed Dec 17 10:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* util.c: Dodgy temp file fix to get export to gol working.

Tue Dec 16 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkmovelist.c, gtkmovelistctrl.c: Draw move analysis lines closer together.

Sun Dec 14 20:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtktoolbar.c: Sort out spacing on toolbar with new "end game" button.
					Update toolbar code to new style at same time.

Sun Dec 14 18:41:20 CET 2008 Christian Anthon <anthon@kiku.dk>

	* import.c: issue warning when importing matchfiles with length >
	MAXSCORE

Sun Dec 14 11:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* play.c: Sort out "stop" button for "end game" and gnubg vs gnubg.
