@@ -18,7 +18,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_REVISION($Revision: 1.210 $)
+AC_REVISION($Revision: 1.211 $)
 AC_INIT([GNU Backgammon],[0.90.0],[bug-gnubg@gnu.org],[gnubg])
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
@@ -207,14 +207,14 @@ dnl
 dnl Checks for declarations
 dnl
 
-AC_CHECK_DECLS(signbit,, AC_DEFINE([signbit(x)], [((x) < 0.0)], [define signbit]), [#include <math.h>])
-AC_CHECK_DECLS(lrint,, AC_DEFINE([lrint(x)], [((long) ((x)+0.5))], [define lrint]), [#include <math.h>])
 AC_CHECK_DECLS(acosf,, AC_DEFINE(acosf, acos, [set acosf to acos if undefined]), [#include <math.h>])
 AC_CHECK_DECLS(asinf,, AC_DEFINE(asinf, asin, [set asinf to asin if undefined]), [#include <math.h>])
 AC_CHECK_DECLS(atanf,, AC_DEFINE(atanf, atan, [set atanf to atan if undefined]), [#include <math.h>])
 AC_CHECK_DECLS(cosf,, AC_DEFINE(cosf, cos, [set cosf to cos if undefined]), [#include <math.h>])
 AC_CHECK_DECLS(sinf,, AC_DEFINE(sinf, sin, [set sinf to sin if undefined]), [#include <math.h>])
 AC_CHECK_DECLS(tanf,, AC_DEFINE(tanf, tan, [set tanf to tan if undefined]), [#include <math.h>])
+AC_CHECK_DECLS(signbit, , , [#include <math.h>])
+AC_CHECK_DECLS(lrint, , , [#include <math.h>])
 
 dnl *******************
 dnl optional components
