@@ -16,11 +16,11 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: neuralnet.c,v 1.57 2008/09/27 20:29:24 c_anthon Exp $
+ * $Id: neuralnet.c,v 1.58 2008/12/29 21:08:02 c_anthon Exp $
  */
 
 #include "config.h"
-
+#include "common.h"
 #include <glib.h>
 #include <errno.h>
 #include <isaac.h>
