@@ -17,10 +17,11 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: neuralnetsse.c,v 1.11 2008/09/27 20:29:25 c_anthon Exp $
+ * $Id: neuralnetsse.c,v 1.12 2008/12/29 21:08:02 c_anthon Exp $
  */
 
 #include "config.h"
+#include "common.h"
 
 #if USE_SSE_VECTORIZE
 
